--- a/widgets/projects/styles.css
+++ b/widgets/projects/styles.css
@@ -1,26 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body {
-    background-color: black;
+    background-color: #191919;
     color: #00ff00;
     font-family: 'Press Start 2P', cursive;
     text-align: center;
-    padding: 50px;
+    padding: 20px;
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 .header a {
     text-decoration: none;
     color: #00ff00;
 }
+
 .header img {
-    width: 200px;
-    height: auto;
+    width: 100px;
+    height: 100px;
 }
+
 .header h1 {
     margin-top: 20px;
     font-size: 24px;
