--- a/widgets/projects/styles.css
+++ b/widgets/projects/styles.css
@@ -5,13 +5,12 @@ body {
     color: #00ff00;
     font-family: 'Press Start 2P', cursive;
     text-align: center;
-    padding: 20px;
     margin: 0;
-    overflow: hidden;
+    padding: 0;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .header {
@@ -27,8 +26,8 @@ body {
 }
 
 .header img {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: auto;
 }
 
 .header h1 {
