--- a/widgets/resources/styles.css
+++ b/widgets/resources/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-body {
+body, html {
     background-color: #191919;
     color: #00ff00;
     font-family: 'Press Start 2P', cursive;
@@ -11,26 +11,35 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
+}
+
+.container {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid transparent;
+    box-sizing: border-box;
 }
 
 .header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-}
-
-.header a {
-    text-decoration: none;
-    color: #00ff00;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
 }
 
 .header img {
-    width: 200px;
-    height: auto;
+    max-width: 100%;
+    max-height: 70%;
+    object-fit: contain;
 }
 
 .header h1 {
-    margin-top: 20px;
+    margin-top: 10px;
     font-size: 24px;
 }
